--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.houari</groupId>
-    <artifactId>Calculator</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>contohprojectcalculator</groupId>
+    <artifactId>projectcalculator</artifactId>
+    <version>0.1.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -21,4 +21,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+         
+    <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/Eralarthama/Kelompok7</url>
+    </repository>
+   </distributionManagement>
+         
 </project>
